# easy-outbox

./: .gitignore  pyproject.toml
outbox/: app.py  base_model.py  base_repo.py  dependecies.py  env.py  jobs.py  logger.py  middleware.py  model.py  postgres.py  repo.py  scheduler.py  service.py  settings.py
outbox/rmq/: rabbitmq.py  schemas.py
