[tool.poetry]
name = "outbox-faststream"
version = "0.1.0"
description = ""
authors = ["harut <harut.avetisyan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
dependency-injector = "^4.41.0"
aio-pika = "^9.4.1"
pydantic-settings = "^2.3.4"
apscheduler = "4.0.0a5"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
